--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pandas~=1.2.4
 vadersentiment~=3.3.2
 snscrape~=0.4.3.20220106
 bs4~=0.0.1
-beautifulsoup4~=4.9.3
 pmdarima~=1.8.2
-deta~=1.1.0
+typing_extensions~=3.7.4.3
+requests~=2.25.1
+urllib3~=1.26.4
