--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,4 @@ snscrape~=0.4.3.20220106
 bs4~=0.0.1
 beautifulsoup4~=4.9.3
 pmdarima~=1.8.2
-uvicorn~=0.17.6
-gunicorn~=20.1.0
+tweet-preprocessor~=0.6.0
