--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydantic~=1.9.0
 keras~=2.6.0
 pandas~=1.2.4
 vadersentiment~=3.3.2
-snscrape~=0.4.3.20220106
+snscrape~=0.3.4
 bs4~=0.0.1
 beautifulsoup4~=4.9.3
 pmdarima~=1.8.2
