--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-fastapi~=0.75.0
+fastapi~=0.75.2
 numpy~=1.19.5
-scikit-learn~=0.24.1
-yfinance~=0.1.63
+scikit-learn~=0.24.2
+yfinance~=0.1.70
 pydantic~=1.9.0
 keras~=2.6.0
-pandas~=1.2.4
-vadersentiment~=3.3.2
+pandas~=1.2.5
+vaderSentiment~=3.3.2
 snscrape~=0.3.4
 bs4~=0.0.1
 beautifulsoup4~=4.9.3
-pmdarima~=1.8.2
-uvicorn~=0.17.6
-gunicorn~=20.1.0
+pmdarima~=1.8.5
+tensorflow~=2.6.0
